# flappy_bird

./: .gitignore  CMakeLists.txt  log.txt  log.vazgen.txt  readme.md
src/: app_sound.cpp  ball.cpp  bird.cpp  consts.cpp  game.cpp  main.cpp
src/controllers/: pipe_controller.cpp  sky_controller.cpp
src/include/: app_sound.h  app_sound.hpp  bird.h  bird.hpp  consts.cpp  consts.h  consts.hpp  dash_board.h  dash_board.hpp  entity.hpp  game.h  game.hpp  logger.h  logger.hpp  pipe.h  pipe.hpp  pipe_controller.h  pipe_controller.hpp  sky_controller.h  sky_controller.hpp
src/logger/: logger.cpp
src/models/: bird.cpp  dash_board.cpp  entity.cpp  pipe.cpp
src/models/bird/: bird.cpp  bird.h
tests/: bird_test.cpp  dash_board_test.cpp  game_test.cpp  test_constants.cpp  test_constants.hpp
